[metadata]
name = jenganizer
version = 0.1
author = Tenable Inc.
author_email = cs.research+opensource@tenable.com
description = Jenganizer is a tool to map hidden services in AWS. It does this by following the triggered events of a user's actions. When a user performs an action in AWS, it can trigger other events in other services. By following these events, users can identify services that are indirectly deployed by their actions. This can be important, as these resources can present security risks which should be managed and controlled.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tenable/hidden-services-revealer
project_urls =
    Bug Tracker = https://github.com/tenable/hidden-services-revealer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
	setuptools~=68.2.0
	boto3~=1.34.86
	click~=8.1.7
	click-log~=0.3.2
	colorlog~=6.8.2
	jenganizer~=0.1

[options.entry_points]
console_scripts=
    jenganizer=jenganizer.jenganizer:cli